* added top margin to avoid overlap with battery indicator on ios * saved on some horizontal space

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,3 +1,4 @@
+body { margin-top:30px; }
 td { white-space: nowrap; }
 select { width:1em; }
 .blinking { text-decoration: blink; }
